--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "modernizr": "~2.6.2",
     "jquery": "~1.11.0",
-    "normalize-css": "~3.0.1"
+    "normalize-css": "~3.0.1",
+    "WOW": "~1.0.2"
   }
 }
