--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.11.0",
     "normalize-css": "~3.0.1",
-    "WOW": "~1.0.2",
-    "stellar.js": "~0.6.2"
+    "WOW": "~1.0.2"
   }
 }
